2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_report_load_underway):
	Remove unused code.

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window-slot.c
	(nautilus_navigation_window_slot_finalize):
	* src/nautilus-window-slot.c (nautilus_window_slot_finalize):
	Call parent method.

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-manage-views.c
	(nautilus_window_emit_location_change),
	(nautilus_window_report_location_change),
	(location_has_really_changed):
	* src/nautilus-window-manage-views.h:
	* src/nautilus-window.c (nautilus_window_set_active_slot):
	Split out emission code from nautilus_window_report_location_change() into
	nautilus_window_emit_location_change(), use it with a location copy
	in location_has_really_changed().

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-spatial-window.c (real_close_slot):
	Call parent method.

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-navigation-window.c: (real_disconnect_content_view):
	Do not try to hide zoom control if we are already destroyed.

	* src/nautilus-spatial-window.c (real_close_slot):
	Do not assert that the slot is currently active.

	* src/nautilus-window.c (nautilus_window_destroy),
	(nautilus_window_close):
	Move slot close code from close() to destroy().

2008-03-22  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-directory-view.c (hidden_files_mode_changed),
	(slot_active), (fm_directory_view_init),
	(fm_directory_view_finalize),
	(fm_directory_view_init_show_hidden_files), (real_merge_menus),
	(fm_directory_view_reset_to_defaults),
	(fm_directory_view_ignore_hidden_file_preferences),
	(fm_directory_view_set_property):
	* src/file-manager/fm-tree-model.c
	(fm_tree_model_set_show_hidden_files):
	* src/file-manager/fm-tree-model.h:
	* src/file-manager/fm-tree-view.c
	(update_filtering_from_preferences):